# MRSegmentator-KonfAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
mrsegmentator_konfai/: main.py
