[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrsegmentator-konfai"
version = "1.0.2"
description = "MRSegmentator running on the KonfAI framework for fast inference."
license = "Apache-2.0"
readme = "README.md"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
"konfai==1.3.2",
"huggingface_hub"
]

[project.urls]
Homepage = "https://github.com/vboussot/MRSegmentator-KonfAI"
Repository = "https://github.com/vboussot/MRSegmentator-KonfAI"
Issues = "https://github.com/vboussot/MRSegmentator-KonfAI/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"


[project.scripts]
mrsegmentator-konfai = "mrsegmentator_konfai.main:main"